src/Components/Message/Media/Document.css
/*
 *  Copyright (c) 2018-present, Evgeny Nadymov
 *
 * This source code is licensed under the GPL v.3.0 license found in the
 * LICENSE file in the root directory of this source tree.
 */

.document {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.document-progress {
    position: absolute;
    top: 0;
    left: 0;
    width: 42px;
    height: 42px;
    margin: 3px;
    animation: spin 4s linear infinite;
}

.document-progress-background {
    position: absolute;
    top: 0;
    left: 0;
    width: 48px;
    height: 48px;
    margin: 0;
    border-radius: 50%;
    background: rgba(26, 26, 26, 0.7);
}

.document-progress-circle {
    stroke-linecap: round;
    color: #ffffff;
}

.document-content {
    flex-grow: 1;
    flex-shrink: 1;
    margin-left: 12px;
    overflow: hidden;
}

.document-title {
    word-wrap: break-word;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-weight: 500;
}

.document-name {
    color: inherit;
    font-weight: 500;
    max-width: 110px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    user-select: none;
}

@keyframes spin {
    100% {
        transform: rotate(360deg);
    }
}

